Quick fix to wrap device cards on home

--- a/src/views/home/styles.scss
+++ b/src/views/home/styles.scss
@@ -38,6 +38,7 @@
   .device-cards {
     display: flex;
     gap: 12px;
+    flex-wrap: wrap;
   }
 
   .server-connection-status {
